# internal/controllers/block.go
@@ -35,7 +35,7 @@ func NewBlockController() (BlockController, error) {
 // @Param n query number true "The number of blocks to get"
 // @produce application/json
 // @Router /blocks [get]
-// @Success 200 {array} models.Block
+// @Success 200 {object} services.BlocksResponse
 func (c *blockController) GetBlocks(ctx *gin.Context) {
 	n, err := strconv.Atoi(ctx.Query("n"))
 	if err != nil {
@@ -62,7 +62,7 @@ func (c *blockController) GetBlocks(ctx *gin.Context) {
 // @Param id path string true "The block number"
 // @produce application/json
 // @Router /blocks/{id} [get]
-// @Success 200 {object} services.BlockResponse
+// @Success 200 {object} services.SingleBlockResponse
 func (c *blockController) GetSingleBlock(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
